--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        ./build_python_virtual_env.sh
     - name: Lint with flake8
       run: |
         pip install flake8
@@ -27,4 +27,6 @@ jobs:
     - name: Test with pytest
       run: |
         pip install pytest
-        pytest
+    - name: Run App
+      run: |
+        python homework/hw1.py
