--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -17,6 +17,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         ./build_python_virtual_env.sh
+        source opencvdl/bin/activate
     - name: Test with pytest
       run: |
         pip install pytest
