--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -13,15 +13,13 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.7
-    - name: Install dependencies
+    - name: Test homework1
       run: |
         python -m pip install --upgrade pip
-        ./build_python_virtual_env.sh
         sudo apt-get install -y python3-tk
+        ./build_python_virtual_env.sh
+        source opencvdl/bin/activate
+        python ./homework/hw1/hw1.py
     - name: Test with pytest
       run: |
         pip install pytest
-    - name: Run App
-      run: |
-        source opencvdl/bin/activate
-        python ./homework/hw1/hw1.py
